Implemented image processing lambda and made the firehose stream name configurable.

--- a/firehose-extension-platform-jar/src/main/resources/alfresco/module/firehose-extension-platform-jar/alfresco-global.properties
+++ b/firehose-extension-platform-jar/src/main/resources/alfresco/module/firehose-extension-platform-jar/alfresco-global.properties
@@ -15,3 +15,6 @@ messaging.transacted=true
 messaging.broker.username=
 messaging.broker.password=
 messaging.broker.url=failover:(tcp://localhost:61616)?timeout=3000&jms.useCompression=true
+
+# Name of the Firehose stream to send events to
+firehose.extension.stream.name=alfresco-events
