Fixed Share config for aspect and added form config for popup edit metadata form.

--- a/firehose-extension-share-jar/src/main/resources/alfresco/web-extension/messages/firehose-extension-share-jar.properties
+++ b/firehose-extension-share-jar/src/main/resources/alfresco/web-extension/messages/firehose-extension-share-jar.properties
@@ -10,6 +10,7 @@
 # Used in "Manage Aspects" and "Change Type" dialogs
 #
 type.acme_insuranceClaimImage=Insurance Claim Image
+aspect.acme_missingClaimTypeProperty=Missing Claim Type Property
 
 # View,Edit,Search,Create Form labels for types and aspects
 #
