Extended model to support richer demo scenarios and updated POM for 1.0 release.
Also removed JRebel references.

--- a/firehose-extension-share-jar/pom.xml
+++ b/firehose-extension-share-jar/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>org.alfresco</groupId>
         <artifactId>firehose-extension</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
 
     <properties>
