--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <groupId>org.alfresco</groupId>
         <artifactId>firehose-extension</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
 
     <properties>
@@ -38,16 +38,7 @@
         </testResources>
 
         <plugins>
-
-            <plugin>
-                <groupId>org.zeroturnaround</groupId>
-                <artifactId>jrebel-maven-plugin</artifactId>
-                <version>${jrebel.version}</version>
-                <configuration>
-                    <rebelXmlDirectory>${project.build.testOutputDirectory}</rebelXmlDirectory>
-                </configuration>
-            </plugin>
-
+        
             <!-- Make sure we attach the tests so we can include them when running -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
