--- a/firehose-extension-share-jar/pom.xml
+++ b/firehose-extension-share-jar/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>org.alfresco</groupId>
         <artifactId>firehose-extension</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
 
     <properties>
