--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <groupId>org.alfresco</groupId>
         <artifactId>firehose-extension</artifactId>
-        <version>1.0.1</version>
+        <version>1.1-SNAPSHOT</version>
     </parent>
 
     <properties>
