--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,6 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.alfresco</groupId>
     <artifactId>firehose-extension</artifactId>
-    <version>1.0.1</version>
     <name>AIO - SDK 3.0</name>
     <description>All-In-One (AIO) project for SDK 3.0</description>
     <packaging>pom</packaging>
@@ -340,4 +339,5 @@
     <module>firehose-extension-share-jar</module>
     <module>integration-tests</module>
   </modules>
+  <version>1.1-SNAPSHOT</version>
 </project>
