Added new type to model insurance claim reports.

--- a/firehose-extension-share-jar/src/main/resources/alfresco/web-extension/messages/firehose-extension-share-jar.properties
+++ b/firehose-extension-share-jar/src/main/resources/alfresco/web-extension/messages/firehose-extension-share-jar.properties
@@ -10,3 +10,4 @@
 # Used in "Manage Aspects" and "Change Type" dialogs
 #
 type.acme_insuranceClaimImage=Insurance Claim Image
+type.acme_insuranceClaimReport=Insurance Claim Report
