--- a/pom.xml
+++ b/pom.xml
@@ -339,5 +339,5 @@
     <module>firehose-extension-share-jar</module>
     <module>integration-tests</module>
   </modules>
-  <version>1.1</version>
+  <version>1.2-SNAPSHOT</version>
 </project>
